# ord-schema

./: .bumpversion.cfg  .clang-format  .coveragerc  .gitattributes  .gitignore  .pre-commit-config.yaml  .pylintrc  .readthedocs.yml  .style.yapf  ALEMBIC_PLAN.md  AUTHORS  CLEANUP_PLAN.md  CONTRIBUTING.md  MANIFEST.in  README.md  VALIDATION_PLAN.md  codecov.yml  compile_proto_wrappers.sh  environment.yml  example_requirements.txt  format.sh  github_example.ipynb  package.json  postBuild  pyproject.toml  pytype.cfg  requirements.txt  run_editor_tests.sh  run_long_tests.sh  run_tests.sh  setup.py  test_requirements.txt
.cursor/rules/: github-pr-replies.mdc  ord-schema-global.mdc  python-single-hash-line.mdc
.github/workflows/: build_and_test.yml  cleanup.yml  colab.yml  colab_badges.yml  lint_pr_title.yml  publish.yml  release.yml  release_bump.yml  run_protoc.yml  run_pylint.yml  run_tests.yml
actions/: change_stats.py  changed_files.sh  commit_changes.sh  lint_js.sh
badges/: reactions.py
docker/: Dockerfile
docs/: build_docs.sh  conf.py  developer.rst  editor.rst  faq.md  faq.rst  index.html  index.rst  overview.md  overview.rst  protos.md  requirements.txt  schema.md  schema.rst  submissions.md  submissions.rst  validations.md
docs/_templates/: README  package.rst_t
docs/developer/: bigquery.md  editor.md  editor.rst
docs/events/: newsletter.rst  rewards.rst
docs/guides/: compound_identifiers.rst  templates.rst
docs/ord_schema/: ord_schema.macros.rst  ord_schema.orm.rst  ord_schema.rst
docs/templates/: README
edit/: Makefile
edit/html/: dataset.html  datasets.html
edit/js/: amounts.js  electro.js  features.js  identifiers.js  reaction.js
editor/: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  import.py  schema.sql  serve.sh
editor/base/: Dockerfile
editor/css/: ketcher-bootstrap.css  ketcher-extras.css  modal.css  reaction.css
editor/db/: empty.pbtxt  full.pbtxt
editor/html/: dataset.html  datasets.html  ketcher_iframe.html  login.html  reaction.html  revisions.html  submissions.html
editor/js/: amounts.js  amounts.js-e  amountsCrudes.js  amountsCrudes.js-e  amountsWorkups.js  codes.js  compounds.js  conditions.js  crudes.js  data.js  dataset.js  electro.js  electro.js-e  enums.js  features.js  flow.js  flow.js-e  identifiers.js  identifiers.js-e  illumination.js  illumination.js-e  inputs.js  inputs.js-e  notes.js  notes.js-e  observations.js  outcomes.js  pressure.js  pressure.js-e  products.js  provenance.js  provenance.js-e  reaction.js  setups.js  stirring.js  stirring.js-e  temperature.js  temperature.js-e  test.js  test.js-e  (+3 more)
editor/py/: migrate.py  serve.py  serve_test.py
examples/: example_template.ipynb  github_broken_example.ipynb  github_example.ipynb
examples/10_Perera_Science_Suzuki/: example_Perera.ipynb  example_Perera.ipynb.orig  supplementary.webloc  test_dataset.pbtxt
examples/11_Dombrowski_sp2-sp3_ACSMCL/: completed_data.csv  example_Dombrowski.ipynb  ml0c00093_si_001.xlsx  original_data.csv
examples/1_Santanilla_Nanomole_HTE/: Santanilla_component_smiles.cdx  Santanilla_experiment2_reaction.pbtxt  example_Perera_copy.ipynb  example_Santanilla.ipynb  experiment_2.csv  experiment_2_molecules.csv  full_text.webloc  supplementary.webloc
examples/2_Nielsen_Deoxyfluorination_Screen/: Deoxyfluorination with Sulfonyl Fluorides- Navigating Reaction Space with Machine Learning | Journal of the American Chemical Society.webloc  example_nielsen.ipynb  nielsen_fig1.csv  supplementary.webloc
examples/3_Liu_Copper_OrgSyn/: example_liu.ipynb  www.orgsyn.org:demo.aspx?prep=v95p0080.webloc
examples/4_Lee_Ketone_Methodology/: full_text.webloc
examples/5_Kwiatkowski_Stepwise_Medchem/: Stepwise Evolution of Fragment Hits against MAPK Interacting Kinases 1 and 2 | Journal of Medicinal Chemistry.webloc
examples/9_Ahneman_Science_CN_Coupling/: additive-list.csv  aryl_halide-list.csv  example_Ahenman.ipynb  ligand-list.csv  supplementary.webloc
google/protobuf/: any_pb.js  api_pb.js  descriptor_pb.js  duration_pb.js  empty_pb.js  field_mask_pb.js  source_context_pb.js  struct_pb.js  timestamp_pb.js  type_pb.js  wrappers_pb.js
interface/docker/: Dockerfile  build_database.sh  postgres.conf  update_image.sh
js/ord-schema/: index.d.ts  index.js  package-lock.json  package.json  webpack.config.js
js/ord-schema-protobufjs/: README.md  index.d.ts  index.js  package.json
ord_schema/: __init__.py  atomic_io.py  atomic_io_test.py  data_storage.py  data_storage_test.py  dataset.py  dataset_templating.py  dataset_templating_test.py  dataset_test.py  datasets.py  datasets_test.py  frozen_message.py  frozen_message_test.py  generate_text.py  huggingface.py  huggingface_test.py  logging.py  message_helpers.py  message_helpers_test.py  parquet.py  parquet_dataset.py  parquet_dataset_test.py  parquet_test.py  process_dataset.py  process_dataset_test.py  resolvers.py  resolvers_test.py  templating.py  templating_test.py  units.py  units_test.py  update_reactions.py  update_reactions_test.py  updates.py  updates_test.py  validate_reactions.py  validate_reactions_test.py  validations.py  validations_test.py
ord_schema.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
ord_schema/db/: reaction.py
ord_schema/interface/: Dockerfile  __init__.py  build_database.py  build_database_longtest.py  build_database_test.py  docker-compose.yml  ord_client.py  ord_client_test.py  query.py  query_longtest.py  query_test.py  search.html  search.py  search.sh  web.html  web.py  web.sh
ord_schema/macros/: __init__.py  solutions.py  solutions_test.py  workups.py  workups_test.py
ord_schema/orm/: README.md  __init__.py  add_dataset.py  add_datasets.py  add_datasets_test.py  base.py  conftest.py  database.py  database_cleaning.py  database_test.py  dataset.py  dataset_test.py  derived_mappers.py  loading.py  loading_test.py  mappers.py  mappers_test.py  orm_test.py  public_mappers.py  queries.py  queries_test.py  query.py  (+10 more)
proto/: analysis.proto  compound.proto  dataset.proto  ord_schema.proto  reaction.proto  test.proto  units.proto
(+137 files in other folders)
