# Copyright 2026 Open Reaction Database Project Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "ord-schema"
version = "0.5.9"
description = "Schema for the Open Reaction Database"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "inflection>=0.5.1",
    "joblib>=1.0.0",
    "numpy>=1.26.4",
    "openpyxl>=3.0.5",
    "pandas>=1.0.4",
    "protobuf>=4.22.3,<6",
    "psycopg[binary,pool]>=3",
    "pyarrow>=14",
    "pygithub>=1.51",
    "python-dateutil>=1.10.0",
    "rdkit>=2021.9.5",
    "sqlalchemy>=2",
    # Pinned <10 because we read _pubchem_resolve.retry to monkeypatch the wait
    # in tests; tenacity 10 may rework that introspection surface.
    "tenacity>=8.0.0,<10",
    "tqdm>=4.61.2",
]

[project.urls]
Homepage = "https://github.com/Open-Reaction-Database/ord-schema"

[project.optional-dependencies]
docs = [
    "Pygments>=2.13.0",
    "Sphinx>=5.3.0",
    "ipython>=8.4.0",
    "sphinx-rtd-theme>=1.1.1",
    "sphinx-tabs>=3.4.0",
]
examples = [
    "matplotlib>=3.3.4",
    "scikit-learn>=0.24.1",
    "tensorflow>=2.4.1",
    "wget>=3.2",
]
tests = [
    "ruff>=0.9.9",
    "coverage>=5.2.1",
    "pytest>=7.1.1",
    "pytest-cov>=3.0.0",
    "pytest-xdist>=3.0.2",
    "ty>=0.0.28",
    "testing-postgresql>=1.3.0",
    "treon>=0.1.3",
]

[tool.setuptools.packages.find]
include = ["ord_schema*"]

[tool.setuptools.package-data]
"ord_schema.proto" = ["*.pyi"]

[tool.ruff]
line-length = 120
# Generated protobuf files: never touch.
extend-exclude = ["*_pb2.py*"]
target-version = "py310"

[tool.ruff.lint]
# Explicit ruleset (previously relied on Ruff's default [E, F, W]).
# Keep this conservative to avoid churn; expand as the codebase stabilizes.
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "W",    # pycodestyle warnings
    "I",    # isort (import sorting)
    "B",    # flake8-bugbear (likely bugs)
    "UP",   # pyupgrade (modernize syntax)
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",    # Line length is enforced by the formatter, not the linter.
    "SIM108",  # Ternary expressions are not always clearer than if/else.
    "B008",    # Function calls in argument defaults are fine for our use cases.
    # B028 (missing stacklevel= on warnings.warn) flags ~88 pre-existing call
    # sites in ord_schema/validations.py. Tackle as a focused follow-up PR
    # rather than mixing it in with tooling migration.
    "B028",
    # SIM102/SIM105/SIM110 are stylistic rewrites (nested-if flattening,
    # contextlib.suppress, any()). Flagged sites here are pre-existing and
    # out of scope for the tooling migration.
    "SIM102",
    "SIM105",
    "SIM110",
]

[tool.ruff.lint.per-file-ignores]
# Tests often redefine fixtures and use patterns that bugbear dislikes.
"**/*_test.py" = ["B011", "B017"]

[tool.ty.src]
exclude = ["**/*_pb2.py*"]
