# Copyright 2026 Open Reaction Database Project Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "ord-schema"
version = "0.6.26"
description = "Schema for the Open Reaction Database"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
]
dependencies = [
    "huggingface-hub>=0.20",
    "inflection>=0.5.1",
    "joblib>=1.0.0",
    "numpy>=1.26.4",
    "openpyxl>=3.0.5",
    "pandas>=1.0.4",
    "protobuf>=4.22.3,<6",
    "psycopg[binary,pool]>=3",
    "pyarrow>=14",
    "pygithub>=1.51",
    "python-dateutil>=1.10.0",
    "rdkit>=2021.9.5",
    "sqlalchemy>=2",
    # Pinned <10 because we read _pubchem_resolve.retry to monkeypatch the wait
    # in tests; tenacity 10 may rework that introspection surface.
    "tenacity>=8.0.0,<10",
    "tqdm>=4.61.2",
]

[project.urls]
Homepage = "https://github.com/Open-Reaction-Database/ord-schema"

[project.optional-dependencies]
docs = [
    "Pygments>=2.13.0",
    "Sphinx>=5.3.0",
    "ipython>=8.4.0",
    "sphinx-rtd-theme>=1.1.1",
    "sphinx-tabs>=3.4.0",
]
examples = [
    "matplotlib>=3.3.4",
    "scikit-learn>=0.24.1",
    "tensorflow>=2.4.1",
    "wget>=3.2",
]
tests = [
    "ruff>=0.9.9",
    "coverage>=5.2.1",
    "pytest>=7.1.1",
    "pytest-cov>=3.0.0",
    "pytest-xdist>=3.0.2",
    "ty>=0.0.28",
    "testing-postgresql>=1.3.0",
    "treon>=0.1.3",
]

[tool.setuptools.packages.find]
include = ["ord_schema*"]

[tool.setuptools.package-data]
"ord_schema.proto" = ["*.pyi"]

[tool.ruff]
line-length = 88
# Generated protobuf files: never touch.
extend-exclude = ["*_pb2.py*"]
target-version = "py311"

[tool.ruff.lint]
# Explicit ruleset (previously relied on Ruff's default [E, F, W]).
# Keep this conservative to avoid churn; expand as the codebase stabilizes.
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "W",    # pycodestyle warnings
    "I",    # isort (import sorting)
    "B",    # flake8-bugbear (likely bugs)
    "UP",   # pyupgrade (modernize syntax)
    "SIM",  # flake8-simplify
    "ANN",  # flake8-annotations (argument, return, and Any-return types)
    "C4",   # flake8-comprehensions
    "COM",  # flake8-commas
    "ISC",  # flake8-implicit-str-concat
    "PT",   # flake8-pytest-style
    "TC",   # flake8-type-checking
    "RET",  # flake8-return
    "ICN",  # flake8-import-conventions
    "FURB", # refurb
    "PYI",  # flake8-pyi
    "PD",   # pandas-vet
    "NPY",  # numpy-specific
    "RUF",  # ruff-specific
    "TRY",  # tryceratops
    "EM",   # flake8-errmsg
    "FBT",  # flake8-boolean-trap
    "G",    # flake8-logging-format
    "PLC", "PLE", "PLR", "PLW",  # pylint
    "C90",  # mccabe complexity
    "PERF", # perflint
    "N",    # pep8-naming
    "SLF",  # flake8-self
    "DTZ",  # flake8-datetimez
    "BLE",  # flake8-blind-except
    "A",    # flake8-builtins
    "INP",  # flake8-no-pep420
    "T20",  # flake8-print
    "ERA",  # eradicate (commented-out code)
    "TD",   # flake8-todos
    "FIX",  # flake8-fixme
    "S",    # flake8-bandit
    "PTH",  # flake8-use-pathlib
]
ignore = [
    # ANN401 (disallow typing.Any) fires only on genuinely dynamic call sites:
    # proxy __getattr__/__getitem__ on message wrappers, a metaclass proxy, an
    # enum __call__, and the recursive field-value validator. Any is correct there.
    "ANN401",
    # COM812 (missing trailing comma) and ISC001 (single-line implicit string
    # concat) conflict with the ruff formatter, which ruff itself recommends
    # disabling when running `ruff format`.
    "COM812",
    "ISC001",
    # RUF001 flags intentional non-ASCII in chemistry text (e.g. Greek "α").
    "RUF001",
    # TC006 quotes the type in typing.cast() even when it is imported at runtime
    # (e.g. cast(Any, x) -> cast("Any", x)); the quoting just hurts readability.
    "TC006",
    # --- Opinionated rules intentionally disabled (readability / low value) ---
    "EM101", "EM102",        # don't force a msg= variable before every raise
    "TRY003",                # don't force custom exception classes for messages
    "TRY301",                # "abstract raise to inner function" hurts readability
    "T201",                  # print() is intentional in CLI scripts and notebooks
    "G004",                  # f-strings in logging calls are fine
    "FBT001", "FBT002",      # boolean positional args exist in public APIs already
    "C901", "PLR0912", "PLR0913", "PLR0915",  # complexity caps -> churn
    "PLR2004",               # "magic value" flags ordinary numeric literals
    "N803",                  # domain argument names (SMILES, fromAtoms) are deliberate
    "INP001",                # docs/conf.py is config, not a package
    "TD003",                 # don't force issue links on informal TODOs
    # S101 (assert): used for test assertions and production type-narrowing
    # (assert x is not None  # Type hint); not a security concern here.
    "S101",
    "FIX002",                # TODO comments are allowed
    "E501",    # Line length is enforced by the formatter, not the linter.
    # B028 (missing stacklevel= on warnings.warn): the ~103 sites in
    # validations.py are data-validation messages collected into ValidationOutput,
    # not deprecation/misuse warnings -- there is no caller location worth pointing
    # at, so stacklevel= would add noise without value.
    "B028",
    # SIM102 (collapsible nested-if): most flagged sites carry an explanatory
    # comment between the outer and inner `if`; collapsing to `if x and y` would
    # orphan that comment and read worse. Left nested on purpose.
    "SIM102",
    # PTH207 (glob.glob -> Path.glob) flags CLI scripts that glob arbitrary
    # user-supplied patterns (e.g. --input_pattern, possibly absolute or with
    # recursive **). pathlib.Path.glob requires a base dir + relative pattern
    # and rejects absolute patterns, so there is no clean equivalent here.
    "PTH207",
]

[tool.ruff.lint.per-file-ignores]
# Tests trip a couple of flake8-bugbear (the "B" rules) checks -- B011 (`assert False`)
# and B017 (overly broad `pytest.raises(Exception)`); type annotations (ANN) also add
# little value on test functions/fixtures, and SLF001 (private-member access)
# is fine in tests. Skip these in tests.
"**/*_test.py" = ["B011", "B017", "ANN", "SLF001", "S603", "S607"]
# Tutorial notebooks legitimately show commented-out alternative code.
"**/*.ipynb" = ["ERA001", "S310"]  # tutorials download from known URLs

[tool.ty.src]
exclude = ["**/*_pb2.py*"]
